using System;
using System.Collections.Generic;
using System.Text;

namespace DIP.Good
{
    public sealed class Fake : IRecord
    {
        public void Record()
        {
            // テスト用
        }
    }
}
