using System;
using System.Collections.Generic;
using System.Text;

namespace DIP.Good
{
    public sealed class Video : IRecord
    {
        public void Record()
        {
           // ビデオに録画
        }
    }
}
